@@ -166,7 +166,7 @@ public class ChildUsageNodeDescriptionProvider extends AbstractNodeDescriptionPr
                 .body(changeContext.build());
 
         var callEditService = this.viewBuilderHelper.newChangeContext()
-                .expression(AQLUtils.getSelfServiceCallExpression("directEdit", "newLabel"));
+                .expression(AQLUtils.getSelfServiceCallExpression("directEditNode", "newLabel"));
 
         var editTool = this.diagramBuilderHelper.newLabelEditTool()
                 .name("Edit")
